--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -78,10 +78,10 @@
     <div class="px-video-img-captions-container">
         <div class="px-video-captions hide" aria-hidden="true"></div>
         <video width="640" height="360" poster="img/duck.png" controls>
-            <source src="video/duck.mp4" type="video/mp4" />
+            <source src="../video/duck.mp4" type="video/mp4" />
             <div>
-                <a href="video/duck.mp4">
-                    <img src="img/duck.png" width="640" height="360" alt="download video" />
+                <a href="../video/duck.mp4">
+                    <img src="../img/duck.png" width="640" height="360" alt="download video" />
                 </a>
             </div>
         </video>
