--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -77,7 +77,7 @@
   <div class="px-video-container" id="myvid">
     <div class="px-video-img-captions-container">
         <div class="px-video-captions hide" aria-hidden="true"></div>
-        <video width="640" height="360" poster="img/duck.png" controls>
+        <video width="640" height="360" poster="../img/duck.png" controls>
             <source src="../video/duck.mp4" type="video/mp4" />
             <div>
                 <a href="../video/duck.mp4">
