--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="px-video-captions hide" aria-hidden="true"></div>
         <video width="640" height="360" poster="img/duck.png" controls>
             <source src="video/duck.mp4" type="video/mp4" />
-            <div>
+            <div> text
                 <a href="video/duck.mp4">
                     <img src="img/duck.png" width="640" height="360" alt="download video" />
                 </a>
